# Geometry-simulator

./: .gitattributes  CMakeLists.txt  CONTRIBUTING.md  Geometry-simulator.SlackBuild  README.md  flake.nix  slack-desc
src/: Camera.hpp  GlobalCalculates.hpp  Point.hpp  Scene.hpp  Segment.hpp  Settings.hpp  main.cpp  main_includes.hpp
